# personal-news

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  vetur.config.js
backend/: .devcontainer.json  .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  environment.yml  manage.py  pyproject.toml  requirements.dev  requirements.txt  schema.yaml
backend/auth/: apps.py  serializers.py  urls.py  views.py
backend/auth/management/commands/: createusers.py
backend/authentication/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_user_is_active.py  0003_add_timestamp_fields.py  0004_alter_user_options.py  0005_alter_user_deleted_at.py
backend/base/: bleach_defaults.py  filters.py  model_fields.py  models.py  paginations.py  permissions.py  sanitization_defaults.py  serializer_fields.py  serializers.py  validators.py
backend/core/: asgi.py  models.py  permissions.py  serializers.py  settings.py  urls.py  wsgi.py
backend/docker/: entrypoint.sh
backend/news/: apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/news/management/commands/: createdummydata.py
backend/news/migrations/: 0001_initial.py  0002_alter_article_cover_image.py  0002_alter_news_cover_image.py  0003_add_sanitized_model_fields.py  0004_add_timestamp_fields.py  0005_alter_article_and_image_options.py  0006_add_url_or_image_to_image_content.py  0006_imagecontent_url.py  0007_alter_deleted_at.py
(+112 files in other folders)
